Always prefer custom profile icon instead of generic icon

In the AvatarToolbarButton, always use the explicitely-set
profile icon instead of the generic avatar icon.

Bug: 879106
Change-Id: I6f9f9fd30710e724516d2a3567a94145ad00b34a
Reviewed-on: https://chromium-review.googlesource.com/1219490
Reviewed-by: Elly Fong-Jones <ellyjones@chromium.org>
Commit-Queue: Thomas Tangl <tangltom@chromium.org>
Cr-Commit-Position: refs/heads/master@{#590308}
Former-commit-id: dfa9f0d1fa549475a40f4fe88e50d35a1cc1d55f